CDRA-433 Fix alignment issue for Brief Description field.
Fix alignment issue for Brief Description field.

--- a/web-app/css/fedu.css
+++ b/web-app/css/fedu.css
@@ -1252,7 +1252,7 @@ h1.green-heading{
     width:100%;
 }
 textarea.form-control {
-    width: 97.5%;
+    width: 100%;
 }
 .enddate{ 
 	position: relative;
